--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,7 +12,7 @@
     "expandedDirs": [
       "html/template",
       "jade",
-      "jade/mod-0"
+      "jade/mod-7"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -677,14 +677,6 @@
       ]
     },
     {
-      "path": "jade/template/000 template.jade",
-      "imports": [
-        "jade/mixins.jade",
-        "jade/includes/header.jade",
-        "jade/includes/js-body-ends.jade"
-      ]
-    },
-    {
       "path": "jade/mod-6/001.jade",
       "imports": [
         "jade/mixins.jade",
@@ -741,23 +733,7 @@
       ]
     },
     {
-      "path": "jade/mod-6/012 documento pdf.jade",
-      "imports": [
-        "jade/mixins.jade",
-        "jade/includes/header.jade",
-        "jade/includes/js-body-ends.jade"
-      ]
-    },
-    {
       "path": "jade/mod-6/008 documento pdf.jade",
-      "imports": [
-        "jade/mixins.jade",
-        "jade/includes/header.jade",
-        "jade/includes/js-body-ends.jade"
-      ]
-    },
-    {
-      "path": "jade/mod-6/008 documento pdf 2.jade",
       "imports": [
         "jade/mixins.jade",
         "jade/includes/header.jade",
@@ -773,23 +749,7 @@
       ]
     },
     {
-      "path": "jade/mod-6/009 documento pdf 2.jade",
-      "imports": [
-        "jade/mixins.jade",
-        "jade/includes/header.jade",
-        "jade/includes/js-body-ends.jade"
-      ]
-    },
-    {
       "path": "jade/mod-6/010 documento pdf.jade",
-      "imports": [
-        "jade/mixins.jade",
-        "jade/includes/header.jade",
-        "jade/includes/js-body-ends.jade"
-      ]
-    },
-    {
-      "path": "jade/mod-6/010 documento pdf 2.jade",
       "imports": [
         "jade/mixins.jade",
         "jade/includes/header.jade",
@@ -803,10 +763,122 @@
         "jade/includes/header.jade",
         "jade/includes/js-body-ends.jade"
       ]
+    },
+    {
+      "path": "jade/mod-7/001.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/template/000 template.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/001 2.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/002.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/002 2.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/003.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/003 2.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/004.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/004 2.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/005.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/005 2.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/006.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/008 documento pdf.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
+    },
+    {
+      "path": "jade/mod-7/007 documento pdf.jade",
+      "imports": [
+        "jade/mixins.jade",
+        "jade/includes/header.jade",
+        "jade/includes/js-body-ends.jade"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
