--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,7 +12,8 @@
     "expandedDirs": [
       "html/template",
       "jade",
-      "jade/mod-7"
+      "jade/mod-7",
+      "jade/mod-4"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
